# bridge-node

./: .gitignore  README.md
esp32-lora-reciever/: CMakeLists.txt  sdkconfig
esp32-lora-reciever/components/sx127x/examples/common/esp_utils/: esp_utils.c
esp32-lora-reciever/components/sx127x/include/: sx127x.h
esp32-lora-reciever/components/sx127x/src/: sx127x.c
esp32-lora-reciever/main/: CMakeLists.txt  main.c
esp32-lora-reciever/main/include/: apiRequests.h  common.h  nvsRegister.h  wifi.h
esp32-lora-reciever/main/src/: apiRequests.c  common.c  nvsRegister.c  wifi.c
